<resources>
    <string name="app_name">Covid 19 Bihar</string>
    <string name="covid_19_testing_lab">Covid-19 Testing lab</string>
    <string name="free_food">Free food</string>
    <string name="fundraisers">Fundraisers</string>
    <string name="hospitals_and_centers">Hospitals and Centers</string>
    <string name="police">Police</string>
    <string name="government_helpline">Government Helpline</string>
    <string name="accommodation_and_shelter_homes">Shelter Homes</string>
    <string name="transportation">Transportation</string>
    <string name="fire_brigade">Fire Brigade</string>
    <string name="ambulance">Ambulance</string>
    <string name="other">Other</string>
    <string name="dec0">Has all details about Covid19 Testing lab </string>
    <string name="dec1">Has all details about Free food available </string>
    <string name="dec2">Has all details about Fundraisers </string>
    <string name="dec3">Has all details about Hospitals and Centers </string>
    <string name="dec4">Has all details about Police help</string>
    <string name="dec5">Has all details about Government Helpline</string>
    <string name="dec6">Has all details about Accommodation and Shelters Homes</string>
    <string name="dec7">Has all details about Transportation </string>
    <string name="dec8">Has all details about Fire Brigade</string>
    <string name="dec9">Has all details about Ambulance</string>
    <string name="dec10">Has all details about other details</string>
    <string name="know_more">know more</string>
    <string name="total">Total</string>
    <string name="active">Active</string>
    <string name="death">Death</string>
    <string name="recovered">Recovered</string>
    <string name="city">City:</string>
    <string name="contact">Contact:</string>
    <string name="description">Description:</string>
    <string name="name_of_the_organization">Name of the organization:</string>
    <string name="phone_no">Phone no:</string>
    <string name="adilabad">Araria:</string>
    <string name="bhadradriKothagudem">Arwal:</string>
    <string name="hyderabad">Aurangabad:</string>
    <string name="jagtial">Banka:</string>
    <string name="jangaon">Begusarai:</string>
    <string name="jayashankarBhupalapally">Bhagalpur:</string>
    <string name="jogulambaGadwal">Bhojpur:</string>
    <string name="kamareddy">Buxar:</string>
    <string name="karimnagar">Darbhanga:</string>
    <string name="khammam">East Champaran:</string>
    <string name="komaramBheem">Gaya:</string>
    <string name="mahabubabad">Gopalganj:</string>
    <string name="mahabubnagar">Jamui:</string>
    <string name="mancherial">Jehanabad:</string>
    <string name="medak">Kaimur:</string>
    <string name="medchalMalkajgiri">Katihar:</string>
    <string name="mulugu">Khagaria:</string>
    <string name="nagarkurnool">Kishanganj:</string>
    <string name="nalgonda">Lakhisarai:</string>
    <string name="narayanpet">Madhepura:</string>
    <string name="nirmal">Madhubani:</string>
    <string name="nizamabad">Munger:</string>
    <string name="peddapalli">Muzaffarpur:</string>
    <string name="rajannaSircilla">Nalanda:</string>
    <string name="rangaReddy">Nawada:</string>
    <string name="sangareddy">Patna:</string>
    <string name="siddipet">Purnia:</string>
    <string name="suryapet">Rohtas:</string>
    <string name="vikarabad">Saharsa:</string>
    <string name="warangalUrban">Samastipur:</string>
    <string name="unknown">Saran:</string>
    <string name="sheikhpura">Sheikhpura:</string>
    <string name="sheohar">Sheohar:</string>
    <string name="sitamarhi">Sitamarhi:</string>
    <string name="siwan">Siwan:</string>
    <string name="supaul">Supaul:</string>
    <string name="vaishali">Vaishali:</string>
    <string name="prevention">Prevention</string>
    <string name="Precautionduringquarantine">Precaution during quarantine</string>
    <string name="leaving">Leaving your home</string>
    <string name="only_leave_your_home_for_critical_reasons_like_a_medical_emergency_or_if_you_were_told_to_go_to_an_assessment_center_by_a_doctor_or_nurse"><![CDATA[Only leave your home for critical reasons (like a medical emergency or if you were told to go to an assessment center by a doctor or nurse)]]></string>
    <string name="going_to_work">Going to work</string>
    <string name="work_from_home_if_possible_if_you_cannot_work_from_home_call_your_manager_and_occupational_health_and_safety_representative_let_them_know_if_you_are_experiencing_symptoms_or_have_been_instructed_to_self_isolate_discuss_your_next_steps_with_them_to_make_sure_you_and_your_company_are_taking_the_right_safety_precautions">Work from home (if possible).If you cannot work from home, call your manager and occupational health and safety representative.Let them know if you are experiencing symptoms or have been instructed to self-isolate.Discuss your next steps with them to make sure you and your company are taking the right safety precautions</string>
    <string name="groceries_medications_and_essential_items">Groceries, medications, and essential items</string>
    <string name="get_someone_who_does_not_live_with_you_to_deliver_these_items_place_orders_over_the_phone_or_online_do_not_go_into_stores_or_supermarkets_in_person"><![CDATA[Get someone who does not live with you to deliver these items.Place orders over the phone or online.Do not go into stores or supermarkets in person]]></string>
    <string name="roommates_and_family_you_live_with">Roommates and family you live with</string>
    <string name="they_should_self_isolate_too_stay_in_a_room_away_from_them_if_possible_use_a_different_bathroom_if_possible_keep_a_distance_of_at_least_6_feet_2_metres_in_shared_spaces_like_kitchens_or_living_rooms">They should self-isolate too.Stay in a room away from them (if possible).Use a different bathroom (if possible).Keep a distance of at least 6 feet (2 metres) in shared spaces like kitchens or living rooms</string>
    <string name="people_you_do_not_live_with">People you do not live with</string>
    <string name="only_contact_them_over_the_phone_or_online_do_not_invite_them_over_or_socialize_in_person"><![CDATA[Only contact them over the phone or online.Do not invite them over or socialize in person]]></string>
    <string name="the_majority_of_covid_19_illnesses_are_mild_if_you_start_to_experience_worsening_symptoms_please_visit_your_local_emergency_department_call_before_you_go_and_let_them_know_you_have_used_this_self_assessment">The majority of COVID-19 illnesses are mild. If you start to experience worsening symptoms, please visit your local emergency department. Call before you go and let them know you have used this self-assessment.</string>
    <string name="tell_people_you_have_been_in_close_physical_contact_with">Tell people you have been in close physical contact with</string>
    <string name="you_should_tell_people_to_monitor_their_health_and_to_self_isolate_if_you_were_in_close_physical_contact_with_them_in_the_2_days_before_your_symptoms_started"><![CDATA[You should tell people to monitor their health and to self-isolate if you were in close physical contact with them in the 2 days before your symptoms started.]]></string>
    <string name="close_physical_contact_means">Close physical contact means:</string>
    <string name="speaking_with_someone_less_than_2_metres_away_for_over_15_minutes_being_in_the_same_room_or_workspace_for_over_15_minutes_living_in_the_same_home">Speaking with someone less than 2 metres away for over 15 minutes.Being in the same room or workspace for over 15 minutes.Living in the same home</string>
    <string name="precautionlast">Monitor your health for a full 14 days after your symptoms started.</string>
    <string name="self_isolation">Self Isolation:</string>
    <string name="avoid_close_contact_with_people_who_are_sick_keep_distance_between_yourself_and_other_people_if_covid_19_is_spreading_in_your_community_this_is_especially_important_for_people_who_are_at_higher_risk_of_getting_very_sick">Avoid close contact with people who are sick. Keep distance between yourself and other people if COVID – 19 is spreading in your community. This is especially important for people who are at higher risk of getting very sick.</string>
    <string name="wash_your_hands_often_with_soap_and_water_for_at_least_20_seconds_especially_after_you_have_been_in_a_public_place_or_after_blowing_your_nose_coughing_sneezing_if_soap_and_water_are_not_readily_available_use_a_hand_sanitizer_that_contains_at_least_60_alcohol_cover_all_surfaces_of_your_hands_and_rub_them_together_until_they_feel_dry_avoid_touching_your_eyes_nose_and_mouth_with_unwashed_hands">Wash your hands often with soap and water for at least 20 seconds especially after you have been in a public place, or after blowing your nose, coughing, sneezing. If soap and water are not readily available, use a hand sanitizer that contains at least 60% alcohol. Cover all surfaces of your hands and rub them together until they feel dry. Avoid touching your eyes, nose and mouth with unwashed hands.</string>
    <string name="wear_a_facemask">Wear a Facemask:</string>
    <string name="if_you_are_sick_you_should_wear_a_facemask_when_you_are_around_other_people_e_g_sharing_a_room_or_vehicle_and_before_you_enter_a_healthcare_provider_s_office_if_you_are_not_able_to_wear_a_facemask_for_example_because_it_causes_trouble_breathing_then_you_should_do_your_best_to_cover_your_coughs_and_sneezers_and_people_who_are_caring_for_you_should_wear_a_facemask_if_they_enter_your_room_if_you_are_not_sick_you_do_not_need_to_wear_a_facemask_unless_you_are_caring_for_someone_who_is_sick_and_they_are_not_able_to_wear_a_facemask_facemasks_may_be_in_short_supply_and_they_should_be_saved_for_caregivers">If you are sick: You should wear a facemask when you are around other people (e.g., sharing a room or vehicle) and before you enter a healthcare provider’s office. If you are not able to wear a facemask (for example, because it causes trouble breathing), then you should do your best to cover your coughs and sneezers, and people who are caring for you should wear a facemask if they enter your room. If you are not sick: You do not need to wear a facemask unless you are caring for someone who is sick (and they are not able to wear a facemask). Facemasks may be in short supply and they should be saved for caregivers.</string>
    <string name="sanitizer">Sanitizer:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="submit">Submit</string>
    <string name="marital_status">Marital Status:</string>
    <string name="dependants">Dependants</string>
    <string name="total_no_of_dependents">Total no of Dependents</string>
    <string name="age">Age:</string>
    <string name="nature_of_work">Nature of Work</string>
    <string name="agricultural">Agricultural</string>
    <string name="fisher_man">Fisher Man</string>
    <string name="industrial_and_manufacturing">Industrial and Manufacturing</string>
    <string name="hotel_and_restaurants_labor">Hotel and Restaurants Labor</string>
    <string name="building_and_construction_labor">Building and Construction Labor</string>
    <string name="married">Married</string>
    <string name="unmarried">Unmarried</string>
    <string name="food">Food</string>
    <string name="health_and_medicine">Health and Medicine</string>
    <string name="accomodation">Accomodation</string>
    <string name="job">Job</string>
    <string name="seeking_help_for">Seeking help for:</string>
    <string name="above_100">above 100</string>
    <string name="_11_to_100">11 to 100</string>
    <string name="_1_to_10">1 to 10</string>
    <string name="quantity">Quantity</string>
    <string name="cooked_food">Cooked food</string>
    <string name="provision">Provision</string>
    <string name="snacks">Snacks</string>
    <string name="food_categories">Food categories</string>
</resources>