<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Unorganizedworker.UnorganizedMain">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <TextView
            android:textColor="@color/Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nature_of_work"

            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="18sp"/>
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <RadioButton android:id="@+id/agricultural"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agricultural"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/fisherMan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fisher_man"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/industrial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/industrial_and_manufacturing"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/hotel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hotel_and_restaurants_labor"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/building"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/building_and_construction_labor"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/transportation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transportation"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/otherunorganized"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>
        <TextView
            android:textColor="@color/Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="18sp"/>
<EditText
    android:id="@+id/unorganizedworkerage"
    android:inputType="number"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    />
        <TextView
            android:textColor="@color/Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marital_status"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="18sp"/>
        <RadioGroup
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">
            <RadioButton android:id="@+id/married"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/married"
                android:onClick="onRadioButtonClickedmaritalstatus"/>
            <RadioButton android:id="@+id/unmarried"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unmarried"
                android:onClick="onRadioButtonClickedmaritalstatus"/>
        </RadioGroup>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="20dp"
            android:text="@string/dependants"
            android:textColor="@color/Black"
            android:textSize="20sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_no_of_dependents"
            android:textColor="@color/Black"
            android:padding="20dp"
            android:textSize="16dp"/>
<LinearLayout
    android:layout_marginLeft="10dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/male"
        android:textColor="@color/Black"
        android:padding="20dp"
        android:textSize="16dp"/>

        <EditText
            android:id="@+id/maledependent"
            android:inputType="number"
            android:layout_width="100dp"
            android:layout_height="wrap_content"/>

</LinearLayout>
        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textColor="@color/Black"
                android:padding="20dp"
                android:textSize="16dp"/>

            <EditText
                android:id="@+id/femaledependent"
                android:inputType="number"
                android:layout_width="100dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seeking_help_for"
            android:textColor="@color/Black"
            android:padding="20dp"
            android:textSize="16dp"/>

        <CheckBox
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food"
            />

        <CheckBox
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/healthandmedicine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health_and_medicine"
            />

        <CheckBox
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/accomodation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accomodation"
            />

        <CheckBox
            android:id="@+id/job"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job"
            />

        <Button
            android:id="@+id/unorganizedworkersubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_gravity="center"
            android:gravity="center"
            />
    </LinearLayout>

</ScrollView>