<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Information.Precation">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/precautionimg"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Precautionduringquarantine"
            android:textSize="20sp"
            android:paddingTop="20dp"
            android:paddingLeft="5dp"
            android:textStyle="bold"
            android:textColor="@color/Black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textSize="19sp"
            android:textColor="@color/Black"
            android:paddingLeft="5dp"
            android:text="@string/leaving"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textSize="17sp"
            android:paddingLeft="10dp"
            android:text="@string/only_leave_your_home_for_critical_reasons_like_a_medical_emergency_or_if_you_were_told_to_go_to_an_assessment_center_by_a_doctor_or_nurse"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textSize="19sp"
            android:textColor="@color/Black"
            android:paddingLeft="5dp"
            android:text="@string/going_to_work"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textSize="17sp"
            android:paddingLeft="10dp"
            android:text="@string/work_from_home_if_possible_if_you_cannot_work_from_home_call_your_manager_and_occupational_health_and_safety_representative_let_them_know_if_you_are_experiencing_symptoms_or_have_been_instructed_to_self_isolate_discuss_your_next_steps_with_them_to_make_sure_you_and_your_company_are_taking_the_right_safety_precautions"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textSize="19sp"
            android:textColor="@color/Black"
            android:paddingLeft="5dp"
            android:text="@string/groceries_medications_and_essential_items"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textSize="17sp"
            android:paddingLeft="10dp"
            android:text="@string/get_someone_who_does_not_live_with_you_to_deliver_these_items_place_orders_over_the_phone_or_online_do_not_go_into_stores_or_supermarkets_in_person"
            />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textSize="19sp"
            android:textColor="@color/Black"
            android:paddingLeft="5dp"
            android:text="@string/roommates_and_family_you_live_with"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textSize="17sp"
            android:paddingLeft="10dp"
            android:text="@string/they_should_self_isolate_too_stay_in_a_room_away_from_them_if_possible_use_a_different_bathroom_if_possible_keep_a_distance_of_at_least_6_feet_2_metres_in_shared_spaces_like_kitchens_or_living_rooms"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textSize="19sp"
            android:textColor="@color/Black"
            android:paddingLeft="5dp"
            android:text="@string/people_you_do_not_live_with"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textSize="17sp"
            android:paddingLeft="10dp"
            android:text="@string/only_contact_them_over_the_phone_or_online_do_not_invite_them_over_or_socialize_in_person"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textSize="19sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:paddingLeft="5dp"
            android:text="@string/the_majority_of_covid_19_illnesses_are_mild_if_you_start_to_experience_worsening_symptoms_please_visit_your_local_emergency_department_call_before_you_go_and_let_them_know_you_have_used_this_self_assessment"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textSize="19sp"
            android:textColor="@color/Black"
            android:paddingLeft="5dp"
            android:text="@string/tell_people_you_have_been_in_close_physical_contact_with"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textSize="17sp"
            android:paddingLeft="10dp"
            android:text="@string/you_should_tell_people_to_monitor_their_health_and_to_self_isolate_if_you_were_in_close_physical_contact_with_them_in_the_2_days_before_your_symptoms_started"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textSize="19sp"
            android:textColor="@color/Black"
            android:paddingLeft="5dp"
            android:text="@string/close_physical_contact_means"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textSize="17sp"
            android:paddingLeft="10dp"
            android:text="@string/speaking_with_someone_less_than_2_metres_away_for_over_15_minutes_being_in_the_same_room_or_workspace_for_over_15_minutes_living_in_the_same_home"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:paddingLeft="5dp"
            android:text="@string/precautionlast"
            />

    </LinearLayout>
</ScrollView>